src/objects/Risk__c.object
<CustomObject>
    <description>2012 ERM Risks</description>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Academy Of Math And Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoholic Beverage Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpine School District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Leadership Charter School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Preparatory Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bear River Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaver School District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Of Pardons &amp; Parole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Of Regents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Elder School District</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculated_Risk_Appetite__c</fullName>
        <formula>if( Expected_Target_Likelihood_Number__c +  Expected_Target_Impact_Number__c  &lt;= 4, &quot;Too Low&quot;, if(Expected_Target_Likelihood_Number__c + Expected_Target_Impact_Number__c &gt;= 8, &quot;Too High&quot;, &quot;Acceptable&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Risk Appetite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearly_Defined__c</fullName>
        <inlineHelpText>Do you believe that this risk record clearly defines the risk?</inlineHelpText>
        <label>Clearly Defined?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consequences__c</fullName>
        <description>Text field to describe the consequences should the risk event occur.</description>
        <inlineHelpText>Describe what the consequences would be if the risk event should occur. Note: This is aggregate consequences, not the individual consequences should a Control fail.</inlineHelpText>
        <label>Consequences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Score__c</fullName>
        <description>Current or Residual Expected Risk Score</description>
        <formula>IF((NOT(ISBLANK(Expected_Residual_Likelihood_Number__c)) || NOT(ISBLANK(Expected_Residual_Impact_Number__c))),(Expected_Residual_Likelihood_Number__c  *  Expected_Residual_Impact_Number__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Risk Score assuming all mitigations work as expected - Current Impact * Current Likelihood</inlineHelpText>
        <label>Current Risk Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Modified__c</fullName>
        <formula>TODAY()-DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_of_Acceptance_of_CRS__c</fullName>
        <description>Risk Owner&apos;s assessment of how they accept the current risk score as being &quot;the best that can be expected&quot;</description>
        <inlineHelpText>Risk Owner indicates 0 - 100% to extent that they accept the current risk score</inlineHelpText>
        <label>Degree of Acceptance of CRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Degree_of_Certainty_of_CRS__c</fullName>
        <description>Estimate of degree to which the risk owner is certain about the estimate of Current Impact and Likelihood - i.e. Current Risk Score</description>
        <inlineHelpText>Risk owner assesses their certainty about the Current Risk Score - 100% represents total unrestricted confidence while 0% indicates no confidence whatsoever that the current risk score is accurate or reasonable.</inlineHelpText>
        <label>Degree of Certainty of CRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <inlineHelpText>Departments that impact the risk</inlineHelpText>
        <label>Departments</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Clinical</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Risks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Impact_Decimal__c</fullName>
        <description>Expected Current Impact with one decimal place</description>
        <inlineHelpText>Must be between 0.0 and 5.0 (inclusive)</inlineHelpText>
        <label>Expected Current Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Impact_Text__c</fullName>
        <description>IF(NOT(ISBLANK(Expected_Current_Impact_Decimal__c)),TEXT(Expected_Current_Impact_Decimal__c),TEXT(Expected_Residual_or_Current_Impact__c))</description>
        <formula>IF(
NOT(ISBLANK( Expected_Current_Impact_Decimal__c )),
TEXT(ROUND(Expected_Current_Impact_Decimal__c,0)),
TEXT( Expected_Residual_or_Current_Impact__c)
)</formula>
        <label>Expected Current Impact Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Likelihood_Decimal__c</fullName>
        <description>Expected Current Likelihood with one decimal place</description>
        <inlineHelpText>Must be between 0.0 and 5.0 (inclusive)</inlineHelpText>
        <label>Expected Current Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Current_Likelihood_Text__c</fullName>
        <formula>IF(NOT(ISBLANK( Expected_Current_Likelihood_Decimal__c )),TEXT(ROUND(Expected_Current_Likelihood_Decimal__c,0)),TEXT( Expected_Residual_or_Current_Likelihood__c ))</formula>
        <label>Expected Current Likelihood Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact_Decimal__c</fullName>
        <label>Expected Inherent Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact_Number__c</fullName>
        <description>Conversion from string to integer value</description>
        <formula>IF(NOT(ISBLANK(Expected_Inherent_Impact_Decimal__c)),Expected_Inherent_Impact_Decimal__c,VALUE(TEXT(Expected_Inherent_Impact__c)))</formula>
        <label>Expected Inherent Impact Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact_Text__c</fullName>
        <formula>IF(NOT(ISBLANK( Expected_Inherent_Impact_Decimal__c )),TEXT(ROUND(Expected_Inherent_Impact_Decimal__c,0)),TEXT( Expected_Inherent_Impact__c ))</formula>
        <label>Expected Inherent Impact Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Impact__c</fullName>
        <description>The Expected Impact without controls. If used as part of a Triangular Distribution is intended to be the most common value, if part of a Normal Distribution, is to be the mean of that distribution</description>
        <inlineHelpText>Select the expected value. This value is as if no Controls will work.
0 = No impact, default value
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Expected Inherent Impact</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood_Decimal__c</fullName>
        <label>Expected Inherent Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Inherent_Likelihood_Decimal__c)),Expected_Inherent_Likelihood_Decimal__c,VALUE(TEXT(Expected_Inherent_Likelihood__c)))</formula>
        <label>Expected Inherent Likelihood Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood_Text__c</fullName>
        <formula>IF(NOT(ISBLANK( Expected_Inherent_Likelihood_Decimal__c )),TEXT(ROUND(Expected_Inherent_Likelihood_Decimal__c,0)),TEXT( Expected_Inherent_Likelihood__c ))</formula>
        <label>Expected Inherent Likelihood Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Inherent_Likelihood__c</fullName>
        <description>The Likelihood the risk event will occur assuming no controls will work or are in existence.
 If used as part of a Triangular Distribution is intended to be the most common value, if part of a Normal Distribution, is to be the mean of that distribution</description>
        <inlineHelpText>Select the expected value. This value is as if no Controls will work. 
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Expected Inherent Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Residual_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Current_Impact_Decimal__c)),Expected_Current_Impact_Decimal__c,VALUE(TEXT(Expected_Residual_or_Current_Impact__c)))</formula>
        <label>Expected Residual Impact Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Residual_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Current_Likelihood_Decimal__c)),Expected_Current_Likelihood_Decimal__c,VALUE(TEXT(Expected_Residual_or_Current_Likelihood__c)))</formula>
        <label>Expected Residual Likelihood Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Residual_or_Current_Impact__c</fullName>
        <description>The Expected Impact with the current controls, assuming they all work as expected.. If used as part of a Triangular Distribution is intended to be the most common value, if part of a Normal Distribution, is to be the mean of that distribution</description>
        <inlineHelpText>Enter the appropriate value - Assume existing Controls will work as expected.
0 = No impact, default
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Expected Residual or Current Impact</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Residual_or_Current_Likelihood__c</fullName>
        <description>The current Likelihood that the risk event will occur, assuming all current controls work as expected.</description>
        <inlineHelpText>Enter the appropriate value - Assume existing Controls will work as expected.
0 = Never, default value
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Expected Residual or Current Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact_Decimal__c</fullName>
        <label>Expected Target Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Target_Impact_Decimal__c)),Expected_Target_Impact_Decimal__c,VALUE(TEXT(Expected_Target_Impact__c)))</formula>
        <label>Expected Target Impact Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact_Text__c</fullName>
        <formula>IF(NOT(ISBLANK( Expected_Target_Impact_Decimal__c )),TEXT(ROUND(Expected_Target_Impact_Decimal__c,0)),TEXT( Expected_Target_Impact__c ))</formula>
        <label>Expected Target Impact Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Impact__c</fullName>
        <description>The desired or preferred Impact level, should the risk event occur. may be higher or lower than Current Likelihood.</description>
        <inlineHelpText>Select the expected value. This is the Risk Level that should exist.
0 = No impact, default value
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Expected Target Impact</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood_Decimal__c</fullName>
        <label>Expected Target Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Target_Likelihood_Decimal__c)),Expected_Target_Likelihood_Decimal__c,VALUE(TEXT(Expected_Target_Likelihood__c)))</formula>
        <label>Expected Target Likelihood Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood_Text__c</fullName>
        <formula>IF(NOT(ISBLANK( Expected_Target_Likelihood_Decimal__c )),TEXT(ROUND(Expected_Target_Likelihood_Decimal__c,0)),TEXT( Expected_Target_Likelihood__c ))</formula>
        <label>Expected Target Likelihood Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Likelihood__c</fullName>
        <description>The most acceptable Likelihood of the Risk event occurring.</description>
        <inlineHelpText>Select the expected value. This is the Risk Level that should exist.
0 = Never, default value
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Expected Target Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explain__c</fullName>
        <inlineHelpText>In 255 characters or fewer, explain how the risk record does not clearly define the risk.</inlineHelpText>
        <label>Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_on_Liquidity__c</fullName>
        <description>Expected effect on liquidity should the event occur</description>
        <inlineHelpText>Enter the approximate financial impact on Liquidity at the Expected level should this risk event occur.</inlineHelpText>
        <label>Impact on Liquidity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Score__c</fullName>
        <description>Risk Score calculated as Impact times Likelihood</description>
        <formula>IF((NOT(ISBLANK(Expected_Inherent_Likelihood_Number__c)) || NOT(ISBLANK(Expected_Inherent_Impact_Number__c))) ,(Expected_Inherent_Likelihood_Number__c  *  Expected_Inherent_Impact_Number__c),0)</formula>
        <inlineHelpText>Inherent Risk score is Inherent Impact * Inherent Likelihood. This is the score that would occur if the existing mitigations/controls did not work.</inlineHelpText>
        <label>Inherent Risk Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Date_Risk_Assessed__c</fullName>
        <description>date on which this Risk was last Assessed</description>
        <inlineHelpText>Enter the date when last assessed</inlineHelpText>
        <label>Last Date Risk Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_Current_Impact_Decimal__c</fullName>
        <label>Maximum Current Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Current_Likelihood_Decimal__c</fullName>
        <label>Maximum Current Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Impact_Decimal__c</fullName>
        <label>Maximum Inherent Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Inherent_Impact_Decimal__c)),Maximum_Inherent_Impact_Decimal__c,
VALUE(TEXT(Maximum_Inherent_Impact__c)))</formula>
        <label>Maximum Inherent Impact Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Impact__c</fullName>
        <description>Maximum Impact that could occur should the risk event happen - assuming no existing controls work.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. This value is as if no Controls will work.
1 = Minimal - Less than $100,000 per event 
2 = Between $100K and $1M 
3 = Between $1M and $10M 
4 = Between $10M and $100M 
5 = Greater than $100M</inlineHelpText>
        <label>Maximum Inherent Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Likelihood_Decimal__c</fullName>
        <label>Maximum Inherent Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Inherent_Likelihood_Decimal__c)),Maximum_Inherent_Likelihood_Decimal__c,
VALUE(TEXT(Maximum_Inherent_Likelihood__c)))</formula>
        <label>Maximum Inherent Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Inherent_Likelihood__c</fullName>
        <description>Maximum Likelihood that this risk event will occur - Assuming no controls will work.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. This value is as if no Controls will work.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Maximum Inherent Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Residual_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Current_Impact_Decimal__c)),Maximum_Current_Impact_Decimal__c,
VALUE(TEXT(Maximum_Residual_or_Current_Impact__c)))</formula>
        <label>Maximum Residual Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Residual_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Current_Likelihood_Decimal__c)),Maximum_Current_Likelihood_Decimal__c,
VALUE(TEXT(Maximum_Residual_or_Current_Likelihood__c)))</formula>
        <label>Maximum Residual Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Residual_or_Current_Impact__c</fullName>
        <description>The Maximum (Top of the range) impact should the risk event occur and the current controls work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale - Assume existing Controls will work as expected.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Maximum Residual or Current Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Residual_or_Current_Likelihood__c</fullName>
        <description>The maximum (worst case) Likelihood that the risk event will occur and the existing controls work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. Assume existing Controls will work as expected.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Maximum Residual or Current Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Impact_Decimal__c</fullName>
        <label>Maximum Target Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Target_Impact_Decimal__c)),Maximum_Target_Impact_Decimal__c,
VALUE(TEXT(Maximum_Target_Impact__c)))</formula>
        <label>Maximum Target Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Impact__c</fullName>
        <description>The desired or preferred Impact level, should the risk event occur. may be higher or lower than Current Likelihood. This is the most pessimistic view of the Target Impact.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Maximum Target Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Likelihood_Decimal__c</fullName>
        <label>Maximum Target Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Maximum_Target_Likelihood_Decimal__c)),Maximum_Target_Likelihood_Decimal__c,
VALUE(TEXT(Maximum_Target_Likelihood__c)))</formula>
        <label>Maximum Target Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Target_Likelihood__c</fullName>
        <description>The most acceptable Likelihood of the Risk event occurring. This is the top end (most pessimistic) value of the range.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Maximum Target Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mean_Current_Impact__c</fullName>
        <description>Mean value of Current Impact assuming all existing controls work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale - Assume existing Controls will work as expected.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Mean Current Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Current_Likelihood__c</fullName>
        <description>Mean (Expected) Likelihood that the risk event will occur and all existing controls work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. Assume existing Controls will work as expected.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Mean Current Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Inherent_Impact__c</fullName>
        <label>Mean Inherent Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Inherent_Likelihood__c</fullName>
        <label>Mean Inherent Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Target_Impact__c</fullName>
        <description>Mean (Expected) Target Impact level. The Expected Impact level that is most acceptable.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Mean Target Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>